tests/cases/ok/enum_imports_main.p4
import enum_imports_colors as colors

def main() -> None:
    value: colors.Color = colors.Color.GREEN
    print(value)
