tests/cases/fail/native_file_list_type.p4
import io


def main() -> None:
    files: list[io.File] = []
